--- a/Anicamp/public/stylesheets/v1.css
+++ b/Anicamp/public/stylesheets/v1.css
@@ -1,78 +1,220 @@
-.form-signin {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: 0 auto;
-  }
-  
-  .form-signin .form-control {
-    position: relative;
-    box-sizing: border-box;
-    height: auto;
-    padding: 10px;
-    font-size: 16px;
-  }
-  
-  .form-signin .form-control:focus {
-    z-index: 2;
-  }
-  
-  .form-signin input[type="text"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-  }
+body{
+  background-color:gray;
+}
 
-  .form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-  }
-  
-  /* Sticky footer styles
-  -------------------------------------------------- */
-  html {
-    position: relative;
-    min-height: 100%;
-  }
-  body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-  }
-  .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+.card{
+color:gray;
+border-radius: 4px;
+background: #fff;
+box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+}
+
+.card-body{
+  background:#232323;
+  color:gray;
+}
+
+#card:hover{
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+.img-fluid:hover{
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+ /*------------------------ Sticky footer styles------------------------------ */
+html {
+  position: relative;
+  min-height: 100%;
+  width:100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
     /* Set the fixed height of the footer here */
-    height: 60px;
-    background-color: #f5f5f5;
-  }
-  
-  .container .text-muted {
-    margin: 20px 0;
-  }
-  
-  /* Thumbnail styles */
-  .thumbnail img {
-      width: 100%;
-  }
-  
-  .thumbnail {
-      padding: 0;
-  }
-  
-.thumbnail .caption-full {
-    padding: 9px;
+  height: 60px;
+  background-color: #f5f5f5;
 }
   
-#delete-form{
+.container .text-muted {
+ margin: 20px 0;
+}
+  
+  /* Thumbnail styles */
+.thumbnail img {
+  width: 100%;
+}
+  
+.thumbnail {
+  padding: 0;
+}
+  
+.thumbnail .caption-full {
+ padding: 9px;
+}
+  
+#delete-form {
   display:inline;
 }
 
-.jumbotron{
+.jumbotron {
   background : url("https://wallpapercave.com/uwp/uwp98041.png") center center / cover no-repeat;
 }
 
 .delete-button{
   margin-left:10px;
+}
+
+/* ----------LOGIN-SIGNUP PAGES----------- */
+.min {
+  background-color:#232323;
+  width: 400px;
+  height: 400px;
+  margin: 7em auto;
+  border-radius: 1.5em;
+  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+  z-index: 2;
+}
+
+.sign {
+  padding-top: 40px;
+  color: #8C55AA;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  font-size: 23px;
+}
+
+.un {
+width: 76%;
+color:#706f6f;
+font-weight: 700;
+font-size: 14px;
+letter-spacing: 1px;
+background:#141313;
+padding: 10px 20px;
+border: none;
+border-radius: 20px;
+outline: none;
+box-sizing: border-box;
+border: 2px solid rgba(0, 0, 0, 0.02);
+margin-bottom: 50px;
+margin-left: 46px;
+text-align: center;
+margin-bottom: 27px;
+font-family: 'Ubuntu', sans-serif;
+}
+
+.form1 {
+  padding-top: 40px;
+}
+
+.pass {
+width: 76%;
+color:#706f6f;
+font-weight: 700;
+font-size: 14px;
+letter-spacing: 1px;
+background:#141313;
+padding: 10px 20px;
+border: none;
+border-radius: 20px;
+outline: none;
+box-sizing: border-box;
+border: 2px solid rgba(0, 0, 0, 0.02);
+margin-bottom: 50px;
+margin-left: 46px;
+text-align: center;
+margin-bottom: 27px;
+font-family: 'Ubuntu', sans-serif;
+}
+
+
+.un:focus, .pass:focus {
+  border: 2px solid #ee8eff8e !important;
+  
+}
+
+.submit {
+  cursor: pointer;
+  border-radius: 5em;
+  color: #fff;
+  background: linear-gradient(to right, #891e9c, #e360fa);
+  border: none;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-family: 'Ubuntu', sans-serif;
+  margin-left: 35%;
+  font-size: 13px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+}
+
+.forgot {
+  text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+  color: #E1BEE7;
+  padding-top: 15px;
+}
+
+a  {
+  text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+  color: #E1BEE7;
+  text-decoration: none
+}
+
+.sign-in:focus {
+  background: linear-gradient(to right, #1e9c3d, #60fad9);
+  outline: none;
+}
+
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
+.sign-up {
+  padding-top: 40px;
+  color:  #239c3e;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  font-size: 23px;
+}
+
+.submit-up  {
+  cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: linear-gradient(to right, #1e9c3d, #60fad9);
+    border: none;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-left: 35%;
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+}
+  
+.sign-up:focus {
+  background: linear-gradient(to right, #891e9c, #e360fa);
+  outline: none;
+}
+
+.forgot-up {
+  text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+  color: #3ad35b;
+  padding-top: 15px;
+}
+
+.un-up:focus, .pass-up:focus {
+  border: 2px solid #3ad35b9a !important;
 }
