--- a/Anicamp/views/login.ejs
+++ b/Anicamp/views/login.ejs
@@ -1,20 +1,14 @@
 <%- include ("partials/header") %>
 
-<div class="row">
-    <div class="col-md-12">
-        <form class="form-signin" action="/login" method="POST">
-          <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-          <label for="inputUsername" class="sr-only">Username</label>
-          <input type="text" id="inputUsername" class="form-control" name="username" placeholder="Username" required autofocus>
-          <label for="inputPassword" class="sr-only">Password</label>
-          <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
-
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+<div class="min">
+    <p class="sign" align="center">Sign in</p>
+    <form class="form1" action="/login" method="POST">
+      <input class="un" type="text" align="center" placeholder="Username"  name="username" required>
+      <input class="pass" type="password" align="center" placeholder="Password"  name="password" required>
+	  <!-- <a class="submit" align="center" type="submit">Sign in</a> -->
+	  <button class="submit sign-in"  align="center" type="submit">Sign in</button>
+	  <p class="forgot" align="center"><a href="/campgrounds">Go Back</a></p>
         </form>
-        <div class="form-signin">
-            <a href="/campgrounds">Go Back</a>
-        </div>
-    </div>
-</div>
+ </div>
 
 <%- include ("partials/footer") %>
